# MGCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  check_install.py  llm-memory-mcp-design.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: catalogue-reminder.py  git-reminder.py  mgcp-precompact.py  mgcp-precompact.sh  mgcp-reminder.py  mgcp-reminder.sh  session-init.py  task-start-reminder.py  user-prompt-dispatcher.py
.github/workflows/: ci.yml  publish.yml
docs/: architecture.html  dashboard.html  feasibility-analysis.html  memory-visualizer-prototype.html  mgcp-finetuning-pipeline-brief.md  mgcp-interception-flow.html  projects.html  rem-cycle-versioned-context-plan.md  self-directed-reminders.md  session-detail.html  telemetry-design.html  tool-invocation-strategies.html
examples/: README.md  mcp-config.json
examples/claude-hooks/: mgcp-precompact.py  mgcp-reminder.py  session-init.py  settings.json  user-prompt-dispatcher.py
examples/claude-hooks/legacy/: error-detector.py  git-reminder.py
scripts/: capture_screenshots.py  seed_demo_data.py
src/mgcp/: __init__.py  backup.py  bootstrap.py  bootstrap_core.py  bootstrap_dev.py  bootstrap_loader.py  catalogue_vector_store.py  data_ops.py  embedding.py  enforcement.py  graph.py  init_project.py  intent_config.py  launcher.py  logging_config.py  migration.py  migrations.py  models.py  persistence.py  qdrant_catalogue_store.py  qdrant_vector_store.py  rem_config.py  rem_cycle.py  reminder_state.py  server.py  skill_cli.py  skill_compiler.py  telemetry.py  vector_store.py  web_server.py
src/mgcp/bootstrap_data/core/: lessons.yaml  relationships.yaml
src/mgcp/bootstrap_data/dev/: accessibility.yaml  api-research.yaml  architecture.yaml  code-quality.yaml  data-privacy.yaml  devops.yaml  error-handling.yaml  git-practices.yaml  new-relationships.yaml  performance.yaml  relationships.yaml  testing-qa.yaml  testing.yaml  verification.yaml  workflows.yaml
src/mgcp/bootstrap_data/dev/security/: access-control.yaml  auth-session.yaml  config-hardening.yaml  crypto-data-protection.yaml  error-logging.yaml  existing-security.yaml  input-validation.yaml  llm-ai-risks.yaml  supply-chain.yaml
src/mgcp/hook_templates/: mgcp-precompact.py  mgcp-reminder.py  post-tool-dispatcher.py  pre-tool-dispatcher.py  session-init.py  user-prompt-dispatcher.py
src/mgcp/static/: architecture.html  dashboard.html  intents.html  lessons.html  memory-visualizer.html  projects.html  query-tree.html  session-detail.html  skills.html
tests/: __init__.py  conftest.py  test_api_ui_integration.py  test_basic.py  test_catalogue_vector.py  test_communities.py  test_data_ops.py  test_enforcement.py  test_failure_recovery.py  test_init_project.py  test_integration.py  test_intent_benchmark.py  test_intent_config.py  test_migrations.py  test_pre_tool_dispatcher.py  test_rem_cycle.py  test_rem_scheduling.py  test_routing_integration.py  test_server_tools.py  test_session_init.py  test_skill_compilation.py  test_skill_compiler.py  test_smoke.py  test_stress.py  test_trigger_coverage.py  test_versioning.py
tests/benchmark_data/: intent_corpus.yaml  llm_blind_classifications.yaml  llm_classifications.yaml  run_blind_llm.py
