[project]
name = "mgcp"
version = "1.0.0"
description = "Memory Graph Control Protocol - Persistent graph-based memory for LLM interactions via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["mcp", "llm", "memory", "graph", "ai", "claude", "anthropic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.2",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.9",
]

[project.scripts]
mgcp = "mgcp.server:main"
mgcp-bootstrap = "mgcp.bootstrap:main"
mgcp-dashboard = "mgcp.web_server:main"
mgcp-launcher = "mgcp.launcher:main"

[project.urls]
Homepage = "https://github.com/devnullnoop/MGCP"
Documentation = "https://github.com/devnullnoop/MGCP#readme"
Repository = "https://github.com/devnullnoop/MGCP"
Issues = "https://github.com/devnullnoop/MGCP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mgcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
