[project]
name = "mgcp"
version = "1.1.0"
description = "Memory Graph Control Protocol - Persistent graph-based memory for LLM interactions via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["mcp", "llm", "memory", "graph", "ai", "claude", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.2",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.9",
]

[project.scripts]
mgcp = "mgcp.server:main"
mgcp-init = "mgcp.init_project:main"
mgcp-bootstrap = "mgcp.bootstrap:main"
mgcp-dashboard = "mgcp.web_server:main"
mgcp-launcher = "mgcp.launcher:main"
mgcp-export = "mgcp.data_ops:main_export"
mgcp-import = "mgcp.data_ops:main_import"
mgcp-duplicates = "mgcp.data_ops:main_duplicates"
mgcp-backup = "mgcp.backup:main"

[project.urls]
Homepage = "https://github.com/devnullnoop/MGCP"
Documentation = "https://github.com/devnullnoop/MGCP#readme"
Repository = "https://github.com/devnullnoop/MGCP"
Issues = "https://github.com/devnullnoop/MGCP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mgcp"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741"]  # Allow single-letter variables in comprehensions

[tool.ruff.lint.per-file-ignores]
"src/mgcp/bootstrap.py" = ["E501"]  # Bootstrap has code examples in strings
"tests/*" = ["E501", "N806"]  # Tests can have long lines and mock variable names

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
