[project]
name = "mgcp"
version = "2.0.0"
description = "Memory Graph Core Primitives - Persistent graph-based memory for LLM interactions via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.md"}
keywords = ["mcp", "llm", "memory", "graph", "ai", "claude", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.2",
    "numpy>=1.26.0,<2.0",  # Pin 1.26.x - has wheels for Intel+ARM Mac, avoids numpy 2.0/onnxruntime conflict
    "qdrant-client>=1.12.0",  # Vector store - local mode or server mode with same API
    "sentence-transformers>=2.2.2",  # For BGE embedding model (BAAI/bge-base-en-v1.5)
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.9",
    "build>=1.0.0",
]

[project.scripts]
mgcp = "mgcp.server:main"
mgcp-init = "mgcp.init_project:main"
mgcp-bootstrap = "mgcp.bootstrap:main"
mgcp-dashboard = "mgcp.web_server:main"
mgcp-launcher = "mgcp.launcher:main"
mgcp-export = "mgcp.data_ops:main_export"
mgcp-import = "mgcp.data_ops:main_import"
mgcp-duplicates = "mgcp.data_ops:main_duplicates"
mgcp-backup = "mgcp.backup:main"
mgcp-migrate = "mgcp.migration:main"

[project.urls]
Homepage = "https://github.com/devnullnoop/MGCP"
Documentation = "https://github.com/devnullnoop/MGCP#readme"
Repository = "https://github.com/devnullnoop/MGCP"
Issues = "https://github.com/devnullnoop/MGCP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["docs/", "examples/", "tests/", ".github/", ".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/mgcp"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741"]  # Allow single-letter variables in comprehensions

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "N806"]  # Tests can have long lines and mock variable names

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (skipped in CI)",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    # aiosqlite background thread cleanup happens after event loop closes - harmless
    "ignore:Exception in thread:pytest.PytestUnhandledThreadExceptionWarning",
    # Custom pytest marks that we use
    "ignore::pytest.PytestUnknownMarkWarning",
]
